--- a/DockerFile
+++ b/DockerFile
@@ -35,6 +35,7 @@ RUN pip install scikit-learn==0.19.0
 RUN pip install tensorflow==1.2.1 
 RUN pip install theano==0.9.0 
 RUN pip install pandas==0.20.3
+RUN pip install langdetect==1.0
 
 EXPOSE 5000
 
